--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -27,7 +27,7 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container mb-3">
     {% block content %}{% endblock %}
 </div>
 <script src="{% static 'js/jquery.min.js' %}"></script>
